--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                 <h3>تجهیزات صنعتی کافه</h3>
                 <p>تجهیزات صنعتی با ضمانت و شرایط نقد و اقساط</p>
             </div>
-            <div class="service-card supply">
-                <a href="#"><img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد " class="service-img"></a>
+            <a href="accessories-bar.html">
+                <img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد " class="service-img">
+            </a>
                 <h3>اکسسوری بار گرم و سرد </h3>
                 <p>تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد ‌</p>
             </div>
