--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
                 <img src="assets/images/service-equipment.png" alt="تجهیزات صنعتی کافه" class="service-img" loading="lazy">
                 <h3>تجهیزات صنعتی کافه</h3>
                 <p>تجهیزات صنعتی با ضمانت و شرایط نقد و اقساط</p>
+            <div class="service-card supply" data-aos="fade-up" data-aos-delay="300">
+                <a href="accessories-bar.html">
+                <img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد" class="service-img" loading="lazy">
+                <h3>اکسسوری بار گرم و سرد</h3>
+                <p>تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
+                </a>
             </div>
-            <a href="accessories-bar.html">
-                <img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد " class="service-img">
-            </a>
-                <h3>اکسسوری بار گرم و سرد </h3>
-                <p>تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد ‌</p>
-            </div>
+
             <div class="service-card supply">
                 <a href="#"><img src="assets/images/service-disposable.png" alt="ظروف یک‌بارمصرف" class="service-img"></a>
                 <h3>ظروف یک‌بارمصرف</h3>
