--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
                 <p>تجهیزات صنعتی با ضمانت و شرایط نقد و اقساط</p>
             </div>
             <div class="service-card supply">
-                <a href="#"><img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد " class="service-img"></a>
-                <h3>اکسسوری بار گرم و سرد </h3>
-                <p>تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد ‌</p>
+                <a href="accessories-bar.html">
+                    <img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد " class="service-img"></a>
+                    <h3>اکسسوری بار گرم و سرد </h3>
+                    <p>تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد ‌</p>
+                </a>
             </div>
             <div class="service-card supply">
                 <a href="#"><img src="assets/images/service-disposable.png" alt="ظروف یک‌بارمصرف" class="service-img"></a>
