--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
                 <img src="assets/images/service-equipment.png" alt="تجهیزات صنعتی کافه" class="service-img" loading="lazy">
                 <h3>تجهیزات صنعتی کافه</h3>
                 <p>تجهیزات صنعتی با ضمانت و شرایط نقد و اقساط</p>
-            </div>
             <div class="service-card supply">
                 <a href="accessories-bar.html">
-                    <img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد " class="service-img"></a>
+                    <img src="assets/images/service-cups.png" alt="اکسسوری بار گرم و سرد " class="service-img" loading="lazy">
                     <h3>اکسسوری بار گرم و سرد </h3>
                     <p>تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد ‌</p>
                 </a>
