--- a/vendor-armoon.html
+++ b/vendor-armoon.html
@@ -1,298 +1,267 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>فروشنده ارمون - اکسسوری بار کافه | کاسبچی</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>فروشگاه آرمان - کاسبچی</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      background-color: #fdfcfb;
-    }
-    .vendor-header {
-      padding-top: 6rem;
-      text-align: center;
-    }
-    .badge {
-      display: inline-block;
-      background: #f4a261;
-      color: #3c2f2f;
-      padding: 0.2rem 0.6rem;
-      border-radius: 6px;
-      font-size: 0.85rem;
-      margin: 0.5rem;
-    }
-    .stats-grid {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      margin-top: 1rem;
-      flex-wrap: wrap;
-    }
-    .stat-item {
-      text-align: center;
-    }
-    .stat-item strong {
-      display: block;
-      font-size: 1.2rem;
-      color: #e76f51;
-    }
-    .filters-bar {
-      max-width: 800px;
-      margin: 2rem auto;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-    .filters-bar select, .filters-bar input {
-      padding: 0.5rem;
-      border-radius: 6px;
-      border: 1px solid #ddd;
-      font-size: 0.9rem;
-    }
-    .product-card {
-      border: 1px solid #eee;
-      border-radius: 12px;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      background: #fff;
-    }
-    .purchase-box {
-      background: #f8edeb;
-      padding: 1rem;
-      border-radius: 8px;
-      margin-top: 1rem;
-      text-align: center;
-    }
-    .ratings {
-      direction: ltr;
-      text-align: right;
-      margin-top: 1rem;
-    }
-    .ratings span {
-      color: gold;
-      font-size: 1.2rem;
-    }
-    .support-icons {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 2rem;
-    }
-    .support-icons div {
-      text-align: center;
-    }
-    .faq {
-      max-width: 800px;
-      margin: 2rem auto;
-      background: #fff;
-      border-radius: 8px;
-      padding: 1rem;
-    }
-    .faq h3 {
-      margin-bottom: 1rem;
-    }
-    .faq-item {
-      margin-bottom: 1rem;
-    }
-    .login-warning {
-      background: #ffe0b2;
-      color: #3c2f2f;
-      padding: 1rem;
-      text-align: center;
-      border-radius: 8px;
-      margin: 2rem auto;
-      max-width: 700px;
-    }
-    .compare-bar, .history-table, .cross-sell {
-      max-width: 800px;
-      margin: 2rem auto;
-      background: #fff;
-      border-radius: 8px;
-      padding: 1rem;
-    }
-    .compare-bar div, .cross-sell div {
-      margin-bottom: 1rem;
-    }
-    .cross-sell img {
-      width: 100px;
-      border-radius: 6px;
-      margin-left: 1rem;
-    }
-    .cross-sell-item {
-      display: flex;
-      align-items: center;
-    }
-    .history-table table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    .history-table th, .history-table td {
-      padding: 0.5rem;
-      border: 1px solid #ddd;
-      text-align: center;
-    }
+    body { font-family: 'Vazirmatn', sans-serif; }
+    .toast { position: fixed; bottom: 20px; right: 20px; padding: 12px 24px; border-radius: 8px; color: white; z-index: 1000; transition: opacity 0.5s; }
+    .toast.success { background-color: #10b981; }
+    .toast.error { background-color: #ef4444; }
   </style>
 </head>
-<body>
-  <header>
-    <div class="logo-text">KasebChi</div>
-  </header>
+<body class="bg-gray-100">
+  <div class="container mx-auto p-4">
+    <!-- Header -->
+    <header class="bg-white shadow-md rounded-lg p-6 mb-6">
+      <h1 class="text-3xl font-bold text-gray-800">کاسبچی</h1>
+      <div class="flex justify-between items-center mt-4">
+        <div>
+          <span class="text-lg font-semibold text-gray-700">تأمین‌کننده شماره ۱</span>
+          <span class="text-sm text-green-600">تأییدشده توسط کاسبچی | فروشنده ویژه ⭐</span>
+        </div>
+        <div class="text-sm text-gray-600">
+          <p>۹۲٪ رضایت مشتری</p>
+          <p>۲ روز زمان ارسال میانگین</p>
+          <p>۴.۷ از ۵ امتیاز کلی</p>
+          <p>۵۸ سفارش در ۶ ماه گذشته</p>
+        </div>
+      </div>
+    </header>
 
-  <section class="vendor-header">
-    <h1>تأمین‌کننده شماره ۱</h1>
-    <span class="badge">تأییدشده توسط کاسبچی</span>
-    <span class="badge">فروشنده ویژه ⭐</span>
-
-    <div class="stats-grid">
-      <div class="stat-item">
-        <strong>۹۲٪</strong> رضایت مشتری
-      </div>
-      <div class="stat-item">
-        <strong>۲ روز</strong> زمان ارسال میانگین
-      </div>
-      <div class="stat-item">
-        <strong>۴.۷ از ۵</strong> امتیاز کلی
-      </div>
-      <div class="stat-item">
-        <strong>۵۸ سفارش</strong> در ۶ ماه گذشته
-      </div>
-    </div>
-  </section>
-
-  <div class="filters-bar">
-    <select>
-      <option>مرتب‌سازی: جدیدترین</option>
-      <option>ارزان‌ترین</option>
-      <option>بیشترین امتیاز</option>
-    </select>
-    <input type="text" placeholder="جستجوی محصول...">
-  </div>
-
-  <section class="blog-post">
-    <!-- محصولات نمونه -->
-    <div class="product-card">
-      <img class="blog-img" src="assets/images/vendor-armoon-1.jpg" alt="تمپر">
-      <h2>تمپر قهوه استیل ۵۸.۴mm</h2>
-      <ul>
-        <li><strong>قیمت:</strong> ۸۹۰٬۰۰۰ تومان</li>
-        <li><strong>موجودی:</strong> ۵ عدد</li>
-        <li><strong>ارسال:</strong> تا ۲ روز کاری</li>
-        <li><strong>توضیحات:</strong> طراحی حرفه‌ای، ضد زنگ، مناسب اسپرسوسازهای صنعتی</li>
-      </ul>
-      <div class="purchase-box">
-        <input type="number" value="1" min="1" max="5">
-        <button class="btn btn-primary">درخواست خرید</button>
-      </div>
-      <div class="ratings">
-        ⭐⭐⭐⭐⭐ (۱۵ رای)
-      </div>
+    <!-- Search and Sort -->
+    <div class="flex justify-between items-center mb-6">
+      <input id="searchInput" type="text" placeholder="جستجوی محصولات..." class="p-2 border rounded-lg w-1/3">
+      <select id="sortSelect" class="p-2 border rounded-lg">
+        <option value="newest">جدیدترین</option>
+        <option value="cheapest">ارزان‌ترین</option>
+        <option value="highest-rated">بیشترین امتیاز</option>
+      </select>
     </div>
 
-    <div class="product-card">
-      <img class="blog-img" src="assets/images/vendor-armoon-2.jpg" alt="پاد تمپر">
-      <h2>پاد تمپر سیلیکونی</h2>
-      <ul>
-        <li><strong>قیمت:</strong> ۴۹۰٬۰۰۰ تومان</li>
-        <li><strong>موجودی:</strong> ۸ عدد</li>
-        <li><strong>ارسال:</strong> ۱ روز کاری</li>
-        <li><strong>توضیحات:</strong> ضد لغزش، مقاوم در برابر حرارت بالا</li>
-      </ul>
-      <div class="purchase-box">
-        <input type="number" value="1" min="1" max="8">
-        <button class="btn btn-primary">درخواست خرید</button>
-      </div>
-      <div class="ratings">
-        ⭐⭐⭐⭐☆ (۱۰ رای)
-      </div>
+    <!-- Products -->
+    <div id="productList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+      <!-- Product cards will be populated by JavaScript -->
     </div>
 
-    <div class="product-card">
-      <img class="blog-img" src="assets/images/vendor-armoon-3.jpg" alt="فرچه تمیزکاری">
-      <h2>فرچه اسپرسو مخزن‌دار</h2>
-      <ul>
-        <li><strong>قیمت:</strong> ۲۵۰٬۰۰۰ تومان</li>
-        <li><strong>موجودی:</strong> ۱۰ عدد</li>
-        <li><strong>ارسال:</strong> ۲ روز کاری</li>
-        <li><strong>توضیحات:</strong> مخزن شوینده دار، برس نرم، دسته ضد لغزش</li>
-      </ul>
-      <div class="purchase-box">
-        <input type="number" value="1" min="1" max="10">
-        <button class="btn btn-primary">درخواست خرید</button>
+    <!-- Similar Product -->
+    <div class="bg-white shadow-md rounded-lg p-6 mt-6">
+      <h2 class="text-xl font-semibold text-gray-800">پیشنهاد مشابه از فروشنده دیگر</h2>
+      <Treasure:          <p>پاد تمپر مشابه توسط فروشنده X</p>
+      <p>قیمت: ۴۷۰٬۰۰۰ تومان | ارسال: ۳ روزه</p>
+      <button id="addToCompareSimilar" class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">افزودن به لیست مقایسه</button>
+    </div>
+
+    <!-- Complementary Products -->
+    <div class="bg-white shadow-md rounded-lg p-6 mt-6">
+      <h2 class="text-xl font-semibold text-gray-800">محصولات مکمل پیشنهادی</h2>
+      <p>استند تمپر چوبی - مناسب برای استفاده کنار تمپر</p>
+    </div>
+
+    <!-- Order History -->
+    <div class="bg-white shadow-md rounded-lg p-6 mt-6">
+      <h2 class="text-xl font-semibold text-gray-800">سابقه سفارش موفق</h2>
+      <table class="w-full mt-4 text-right">
+        <thead>
+          <tr class="border-b">
+            <th class="p-2">تاریخ</th>
+            <th class="p-2">محصول</th>
+            <th class="p-2">امتیاز مشتری</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="p-2">۱۴۰۳/۰۲/۱۲</td>
+            <td class="p-2">تمپر استیل</td>
+            <td class="p-2">⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td class="p-2">۱۴۰۳/۰۲/۱۰</td>
+            <td class="p-2">پاد تمپر</td>
+            <td class="p-2">⭐⭐⭐⭐</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- FAQ -->
+    <div class="bg-white shadow-md rounded-lg p-6 mt-6">
+      <h2 class="text-xl font-semibold text-gray-800">سوالات پرتکرار</h2>
+      <div class="mt-4">
+        <p class="font-semibold">آیا امکان مرجوعی وجود دارد؟</p>
+        <p>در صورتی که کالا استفاده نشده باشد، تا ۳ روز فرصت دارید بازگشت دهید.</p>
       </div>
-      <div class="ratings">
-        ⭐⭐⭐⭐☆ (۸ رای)
+      <div class="mt-4">
+        <p class="font-semibold">محصولات شامل گارانتی هستند؟</p>
+        <p>بله، تمام محصولات دارای ضمانت اصالت و سلامت فیزیکی هستند.</p>
       </div>
     </div>
 
-    <div class="product-card">
-      <img class="blog-img" src="assets/images/vendor-armoon-4.jpg" alt="استند تمپر">
-      <h2>استند تمپر چوبی</h2>
-      <ul>
-        <li><strong>قیمت:</strong> ۳۲۰٬۰۰۰ تومان</li>
-        <li><strong>موجودی:</strong> ۳ عدد</li>
-        <li><strong>ارسال:</strong> ۱ تا ۲ روز کاری</li>
-        <li><strong>توضیحات:</strong> طراحی کلاسیک، نگهدارنده ایمن تمپر</li>
-      </ul>
-      <div class="purchase-box">
-        <input type="number" value="1" min="1" max="3">
-        <button class="btn btn-primary">درخواست خرید</button>
-      </div>
-      <div class="ratings">
-        ⭐⭐⭐⭐⭐ (۱۲ رای)
-      </div>
+    <!-- Cart Summary -->
+    <div id="cartSummary" class="bg-white shadow-md rounded-lg p-6 mt-6 hidden">
+      <h2 class="text-xl font-semibold text-gray-800">سبد خرید</h2>
+      <ul id="cartItems" class="mt-4"></ul>
     </div>
-  </section>
 
-  <div class="compare-bar">
-    <h3>پیشنهاد مشابه از فروشنده دیگر</h3>
-    <p>پاد تمپر مشابه توسط فروشنده X با قیمت ۴۷۰٬۰۰۰ تومان و ارسال ۳ روزه</p>
-    <button class="btn btn-secondary">افزودن به لیست مقایسه</button>
-  </div>
-
-  <div class="cross-sell">
-    <h3>محصولات مکمل پیشنهادی</h3>
-    <div class="cross-sell-item">
-      <img src="assets/images/vendor-armoon-4.jpg" alt="استند">
-      <div>
-        <strong>استند تمپر چوبی</strong>
-        <p>مناسب برای استفاده کنار تمپر</p>
+    <!-- Comparison Modal -->
+    <div id="compareModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center">
+      <div class="bg-white rounded-lg p-6 w-full max-w-2xl">
+        <h2 class="text-xl font-semibold text-gray-800">لیست مقایسه</h2>
+        <ul id="compareList" class="mt-4"></ul>
+        <button id="closeModal" class="mt-4 px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600">بستن</button>
       </div>
     </div>
   </div>
 
-  <div class="history-table">
-    <h3>سابقه سفارش موفق</h3>
-    <table>
-      <tr><th>تاریخ</th><th>محصول</th><th>امتیاز مشتری</th></tr>
-      <tr><td>۱۴۰۳/۰۲/۱۲</td><td>تمپر استیل</td><td>⭐⭐⭐⭐⭐</td></tr>
-      <tr><td>۱۴۰۳/۰۲/۱۰</td><td>پاد تمپر</td><td>⭐⭐⭐⭐</td></tr>
-    </table>
-  </div>
+  <!-- Toast Notification -->
+  <div id="toast" class="toast hidden"></div>
 
-  <div class="support-icons">
-    <div><img src="assets/images/compare-delivery.png" width="48"><p>ارسال سریع</p></div>
-    <div><img src="assets/images/compare-quality.png" width="48"><p>تضمین کیفیت</p></div>
-    <div><img src="assets/images/compare-support.png" width="48"><p>پشتیبانی کامل</p></div>
-  </div>
+  <script>
+    const products = [
+      { id: 1, name: 'تمپر قهوه استیل ۵۸.۴mm', price: 890000, stock: 5, shipping: 'تا ۲ روز کاری', desc: 'طراحی حرفه‌ای، ضد زنگ، مناسب اسپرسوسازهای صنعتی', rating: '⭐⭐⭐⭐⭐', votes: 15 },
+      { id: 2, name: 'پاد تمپر سیلیکونی', price: 490000, stock: 8, shipping: '۱ روز کاری', desc: 'ضد لغزش، مقاوم در برابر حرارت بالا', rating: '⭐⭐⭐⭐☆', votes: 10 },
+      { id: 3, name: 'فرچه اسپرسو مخزن‌دار', price: 250000, stock: 10, shipping: '۲ روز کاری', desc: 'مخزن شوینده دار، برس نرم، دسته ضد لغزش', rating: '⭐⭐⭐⭐☆', votes: 8 },
+      { id: 4, name: 'استند تمپر چوبی', price: 320000, stock: 3, shipping: '۱ تا ۲ روز کاری', desc: 'طراحی کلاسیک، نگهدارنده ایمن تمپر', rating: '⭐⭐⭐⭐⭐', votes: 12 },
+    ];
 
-  <div class="faq">
-    <h3>سوالات پرتکرار</h3>
-    <div class="faq-item">
-      <strong>آیا امکان مرجوعی وجود دارد؟</strong>
-      <p>در صورتی که کالا استفاده نشده باشد، تا ۳ روز فرصت دارید بازگشت دهید.</p>
-    </div>
-    <div class="faq-item">
-      <strong>محصولات شامل گارانتی هستند؟</strong>
-      <p>بله، تمام محصولات دارای ضمانت اصالت و سلامت فیزیکی هستند.</p>
-    </div>
-  </div>
+    let cart = [];
+    let compareList = [];
 
-  <div class="login-warning">
-    برای مشاهده قیمت سایر محصولات و ثبت سفارش نهایی، لطفاً وارد حساب کاربری خود شوید.
-  </div>
+    function formatPrice(price) {
+      return price.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '٬') + ' تومان';
+    }
+
+    function showToast(message, type) {
+      const toast = document.getElementById('toast');
+      toast.textContent = message;
+      toast.classList.remove('hidden', 'success', 'error');
+      toast.classList.add(type);
+      setTimeout(() => toast.classList.add('hidden'), 3000);
+    }
+
+    function renderProducts(productArray) {
+      const productList = document.getElementById('productList');
+      productList.innerHTML = '';
+      productArray.forEach(product => {
+        const card = document.createElement('div');
+        card.className = 'bg-white shadow-md rounded-lg p-4 hover:shadow-lg transition';
+        card.innerHTML = `
+          <img src="https://via.placeholder.com/150" alt="${product.name}" class="w-full h-40 object-cover rounded-md mb-4">
+          <h3 class="text-lg font-semibold">${product.name}</h3>
+          <p class="text-gray-600">قیمت: ${formatPrice(product.price)}</p>
+          <p class="text-gray-600">موجودی: ${product.stock} عدد</p>
+          <p class="text-gray-600">ارسال: ${product.shipping}</p>
+          <p class="text-gray-600">توضیحات: ${product.desc}</p>
+          <p class="text-gray-600">${product.rating} (${product.votes} رای)</p>
+          <button class="add-to-cart mt-2 px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600" data-id="${product.id}">درخواست خرید</button>
+          <button class="add-to-compare mt-2 ml-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" data-id="${product.id}">افزودن به مقایسه</button>
+        `;
+        productList.appendChild(card);
+      });
+
+      document.querySelectorAll('.add-to-cart').forEach(button => {
+        button.addEventListener('click', () => {
+          const id = parseInt(button.dataset.id);
+          const product = products.find(p => p.id === id);
+          if (cart.find(item => item.id === id)) {
+            showToast('این محصول قبلاً به سبد خرید اضافه شده است!', 'error');
+          } else {
+            cart.push(product);
+            updateCart();
+            showToast('محصول به سبد خرید اضافه شد!', 'success');
+          }
+        });
+      });
+
+      document.querySelectorAll('.add-to-compare').forEach(button => {
+        button.addEventListener('click', () => {
+          const id = parseInt(button.dataset.id);
+          const product = products.find(p => p.id === id);
+          if (compareList.find(item => item.id === id)) {
+            showToast('این محصول قبلاً به لیست مقایسه اضافه شده است!', 'error');
+          } else {
+            compareList.push(product);
+            updateCompareList();
+            showToast('محصول به لیست مقایسه اضافه شد!', 'success');
+          }
+        });
+      });
+    }
+
+    function updateCart() {
+      const cartSummary = document.getElementById('cartSummary');
+      const cartItems = document.getElementById('cartItems');
+      if (cart.length > 0) {
+        cartSummary.classList.remove('hidden');
+        cartItems.innerHTML = cart.map(item => `
+          <li class="flex justify-between py-2 border-b">
+            <span>${item.name}</span>
+            <span>${formatPrice(item.price)}</span>
+          </li>
+        `).join('');
+      } else {
+        cartSummary.classList.add('hidden');
+      }
+    }
+
+    function updateCompareList() {
+      const compareListElement = document.getElementById('compareList');
+      compareListElement.innerHTML = compareList.map(item => `
+        <li class="flex justify-between py-2 border-b">
+          <span>${item.name}</span>
+          <span>${formatPrice(item.price)}</span>
+        </li>
+      `).join('');
+      document.getElementById('compareModal').classList.remove('hidden');
+    }
+
+    function sortProducts(criteria) {
+      let sortedProducts = [...products];
+      switch (criteria) {
+        case 'cheapest':
+          sortedProducts.sort((a, b) => a.price - b.price);
+          break;
+        case 'highest-rated':
+          sortedProducts.sort((a, b) => b.votes - a.votes);
+          break;
+        default:
+          sortedProducts = [...products];
+      }
+      renderProducts(sortedProducts);
+    }
+
+    document.getElementById('sortSelect').addEventListener('change', (e) => {
+      sortProducts(e.target.value);
+    });
+
+    document.getElementById('searchInput').addEventListener('input', (e) => {
+      const query = e.target.value.toLowerCase();
+      const filteredProducts = products.filter(product =>
+        product.name.toLowerCase().includes(query) || product.desc.toLowerCase().includes(query)
+      );
+      renderProducts(filteredProducts);
+    });
+
+    document.getElementById('closeModal').addEventListener('click', () => {
+      document.getElementById('compareModal').classList.add('hidden');
+    });
+
+    document.getElementById('addToCompareSimilar').addEventListener('click', () => {
+      const similarProduct = { id: 5, name: 'پاد تمپر مشابه', price: 470000 };
+      if (compareList.find(item => item.id === similarProduct.id)) {
+        showToast('این محصول قبلاً به لیست مقایسه اضافه شده است!', 'error');
+      } else {
+        compareList.push(similarProduct);
+        updateCompareList();
+        showToast('محصول مشابه به لیست مقایسه اضافه شد!', 'success');
+      }
+    });
+
+    // Initial render
+    renderProducts(products);
+  </script>
 </body>
 </html>
