--- a/vendor-armoon.html
+++ b/vendor-armoon.html
@@ -11,11 +11,12 @@
     .toast { position: fixed; bottom: 20px; right: 20px; padding: 12px 24px; border-radius: 8px; color: white; z-index: 1000; transition: opacity 0.5s; }
     .toast.success { background-color: #10b981; }
     .toast.error { background-color: #ef4444; }
+    .blog-img { width: 100%; height: 150px; object-fit: cover; border-radius: 8px; }
   </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-white">
   <div class="container mx-auto p-4">
-    <!-- Header -->
+    <!-- سربرگ -->
     <header class="bg-white shadow-md rounded-lg p-6 mb-6">
       <h1 class="text-3xl font-bold text-gray-800">کاسبچی</h1>
       <div class="flex justify-between items-center mt-4">
@@ -32,7 +33,7 @@
       </div>
     </header>
 
-    <!-- Search and Sort -->
+    <!-- جستجو و مرتب‌سازی -->
     <div class="flex justify-between items-center mb-6">
       <input id="searchInput" type="text" placeholder="جستجوی محصولات..." class="p-2 border rounded-lg w-1/3">
       <select id="sortSelect" class="p-2 border rounded-lg">
@@ -42,26 +43,26 @@
       </select>
     </div>
 
-    <!-- Products -->
+    <!-- محصولات -->
     <div id="productList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      <!-- Product cards will be populated by JavaScript -->
+      <!-- کارت‌های محصول توسط JavaScript پر می‌شوند -->
     </div>
 
-    <!-- Similar Product -->
+    <!-- پیشنهاد مشابه -->
     <div class="bg-white shadow-md rounded-lg p-6 mt-6">
       <h2 class="text-xl font-semibold text-gray-800">پیشنهاد مشابه از فروشنده دیگر</h2>
-      <Treasure:          <p>پاد تمپر مشابه توسط فروشنده X</p>
+      <p>پاد تمپر مشابه توسط فروشنده X</p>
       <p>قیمت: ۴۷۰٬۰۰۰ تومان | ارسال: ۳ روزه</p>
       <button id="addToCompareSimilar" class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">افزودن به لیست مقایسه</button>
     </div>
 
-    <!-- Complementary Products -->
+    <!-- محصولات مکمل -->
     <div class="bg-white shadow-md rounded-lg p-6 mt-6">
       <h2 class="text-xl font-semibold text-gray-800">محصولات مکمل پیشنهادی</h2>
       <p>استند تمپر چوبی - مناسب برای استفاده کنار تمپر</p>
     </div>
 
-    <!-- Order History -->
+    <!-- سابقه سفارش -->
     <div class="bg-white shadow-md rounded-lg p-6 mt-6">
       <h2 class="text-xl font-semibold text-gray-800">سابقه سفارش موفق</h2>
       <table class="w-full mt-4 text-right">
@@ -87,7 +88,7 @@
       </table>
     </div>
 
-    <!-- FAQ -->
+    <!-- سوالات پرتکرار -->
     <div class="bg-white shadow-md rounded-lg p-6 mt-6">
       <h2 class="text-xl font-semibold text-gray-800">سوالات پرتکرار</h2>
       <div class="mt-4">
@@ -100,13 +101,13 @@
       </div>
     </div>
 
-    <!-- Cart Summary -->
+    <!-- خلاصه سبد خرید -->
     <div id="cartSummary" class="bg-white shadow-md rounded-lg p-6 mt-6 hidden">
       <h2 class="text-xl font-semibold text-gray-800">سبد خرید</h2>
       <ul id="cartItems" class="mt-4"></ul>
     </div>
 
-    <!-- Comparison Modal -->
+    <!-- مدال مقایسه -->
     <div id="compareModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center">
       <div class="bg-white rounded-lg p-6 w-full max-w-2xl">
         <h2 class="text-xl font-semibold text-gray-800">لیست مقایسه</h2>
@@ -116,15 +117,15 @@
     </div>
   </div>
 
-  <!-- Toast Notification -->
+  <!-- اعلان Toast -->
   <div id="toast" class="toast hidden"></div>
 
   <script>
     const products = [
-      { id: 1, name: 'تمپر قهوه استیل ۵۸.۴mm', price: 890000, stock: 5, shipping: 'تا ۲ روز کاری', desc: 'طراحی حرفه‌ای، ضد زنگ، مناسب اسپرسوسازهای صنعتی', rating: '⭐⭐⭐⭐⭐', votes: 15 },
-      { id: 2, name: 'پاد تمپر سیلیکونی', price: 490000, stock: 8, shipping: '۱ روز کاری', desc: 'ضد لغزش، مقاوم در برابر حرارت بالا', rating: '⭐⭐⭐⭐☆', votes: 10 },
-      { id: 3, name: 'فرچه اسپرسو مخزن‌دار', price: 250000, stock: 10, shipping: '۲ روز کاری', desc: 'مخزن شوینده دار، برس نرم، دسته ضد لغزش', rating: '⭐⭐⭐⭐☆', votes: 8 },
-      { id: 4, name: 'استند تمپر چوبی', price: 320000, stock: 3, shipping: '۱ تا ۲ روز کاری', desc: 'طراحی کلاسیک، نگهدارنده ایمن تمپر', rating: '⭐⭐⭐⭐⭐', votes: 12 },
+      { id: 1, name: 'تمپر قهوه استیل ۵۸.۴mm', price: 890000, stock: 5, shipping: 'تا ۲ روز کاری', desc: 'طراحی حرفه‌ای، ضد زنگ، مناسب اسپرسوسازهای صنعتی', rating: '⭐⭐⭐⭐⭐', votes: 15, image: 'assets/images/vendor-armoon-1.jpg' },
+      { id: 2, name: 'پاد تمپر سیلیکونی', price: 490000, stock: 8, shipping: '۱ روز کاری', desc: 'ضد لغزش، مقاوم در برابر حرارت بالا', rating: '⭐⭐⭐⭐☆', votes: 10, image: 'assets/images/vendor-armoon-2.jpg' },
+      { id: 3, name: 'فرچه اسپرسو مخزن‌دار', price: 250000, stock: 10, shipping: '۲ روز کاری', desc: 'مخزن شوینده دار، برس نرم، دسته ضد لغزش', rating: '⭐⭐⭐⭐☆', votes: 8, image: 'assets/images/vendor-armoon-3.jpg' },
+      { id: 4, name: 'استند تمپر چوبی', price: 320000, stock: 3, shipping: '۱ تا ۲ روز کاری', desc: 'طراحی کلاسیک، نگهدارنده ایمن تمپر', rating: '⭐⭐⭐⭐⭐', votes: 12, image: 'assets/images/vendor-armoon-4.jpg' },
     ];
 
     let cart = [];
@@ -147,17 +148,19 @@
       productList.innerHTML = '';
       productArray.forEach(product => {
         const card = document.createElement('div');
-        card.className = 'bg-white shadow-md rounded-lg p-4 hover:shadow-lg transition';
+        card.className = 'product-card bg-white shadow-md rounded-lg p-4 hover:shadow-lg transition';
         card.innerHTML = `
-          <img src="https://via.placeholder.com/150" alt="${product.name}" class="w-full h-40 object-cover rounded-md mb-4">
-          <h3 class="text-lg font-semibold">${product.name}</h3>
-          <p class="text-gray-600">قیمت: ${formatPrice(product.price)}</p>
-          <p class="text-gray-600">موجودی: ${product.stock} عدد</p>
-          <p class="text-gray-600">ارسال: ${product.shipping}</p>
-          <p class="text-gray-600">توضیحات: ${product.desc}</p>
-          <p class="text-gray-600">${product.rating} (${product.votes} رای)</p>
-          <button class="add-to-cart mt-2 px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600" data-id="${product.id}">درخواست خرید</button>
-          <button class="add-to-compare mt-2 ml-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" data-id="${product.id}">افزودن به مقایسه</button>
+          <img class="blog-img" src="${product.image}" alt="${product.name}">
+          <h2 class="text-lg font-semibold">${product.name}</h2>
+          <ul>
+            <li class="text-gray-600">قیمت: ${formatPrice(product.price)}</li>
+            <li class="text-gray-600">موجودی: ${product.stock} عدد</li>
+            <li class="text-gray-600">ارسال: ${product.shipping}</li>
+            <li class="text-gray-600">توضیحات: ${product.desc}</li>
+            <li class="text-gray-600">${product.rating} (${product.votes} رای)</li>
+            <li><button class="add-to-cart mt-2 px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600" data-id="${product.id}">درخواست خرید</button></li>
+            <li><button class="add-to-compare mt-2 ml-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" data-id="${product.id}">افزودن به مقایسه</button></li>
+          </ul>
         `;
         productList.appendChild(card);
       });
@@ -260,7 +263,7 @@
       }
     });
 
-    // Initial render
+    // رندر اولیه
     renderProducts(products);
   </script>
 </body>
