--- a/index.html
+++ b/index.html
@@ -6,48 +6,43 @@
     <title>TestSit</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Vazirmatn', sans-serif; }
-        .fade-in { animation: fadeIn 0.5s ease-in; }
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .card:hover { transform: scale(1.05); transition: transform 0.3s ease; }
-    </style>
+    <link rel="stylesheet" href="/styles.css">
 </head>
-<body class="bg-white">
+<body>
     <div class="container mx-auto p-4">
         <!-- سربرگ -->
-        <header class="bg-white shadow-md rounded-lg p-6 mb-6 flex items-center justify-between">
+        <header class="rounded-lg p-6 mb-6 flex items-center justify-between">
             <div class="flex items-center">
-                <img src="assets/images/logo-testsit.png" alt="لوگو TestSit" class="h-12 mr-4">
-                <h1 class="text-3xl font-bold text-gray-800">TestSit</h1>
+                <img src="assets/images/logo-testsit.png" alt="لوگو TestSit" class="logo">
+                <h1 class="text-3xl font-bold">TestSit</h1>
             </div>
-            <nav class="text-sm text-gray-600">
-                <a href="/index.html" class="hover:text-green-700">خانه</a>
-                <a href="/about.html" class="hover:text-green-700 mr-4">درباره ما</a>
-                <a href="/signup.html" class="hover:text-green-700 mr-4">ثبت‌نام</a>
+            <nav class="text-sm">
+                <a href="/index.html">خانه</a>
+                <a href="/about.html" class="mr-4">درباره ما</a>
+                <a href="/signup.html" class="mr-4">ثبت‌نام</a>
             </nav>
         </header>
 
         <!-- بخش خدمات -->
         <section class="py-12">
-            <h2 class="text-2xl font-bold text-center text-gray-800 mb-8">خدمات TestSit</h2>
+            <h2 class="text-2xl font-bold text-center mb-8">خدمات TestSit</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div class="card bg-white shadow-md rounded-lg p-6 text-center fade-in">
-                    <img src="assets/images/accessories.jpg" alt="اکسسوری بار گرم و سرد" class="w-full h-40 object-cover rounded-lg mb-4">
-                    <h3 class="text-lg font-semibold text-gray-800">اکسسوری بار گرم و سرد</h3>
-                    <p class="text-gray-600 mt-2">تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
-                    <a href="/accessories.html" class="mt-4 inline-block px-4 py-2 bg-green-700 text-white rounded-lg hover:bg-green-800">مشاهده</a>
+                <div class="card p-6 text-center fade-in">
+                    <img src="assets/images/accessories.jpg" alt="اکسسوری بار گرم و سرد">
+                    <h3 class="text-lg font-semibold">اکسسوری بار گرم و سرد</h3>
+                    <p class="mt-2">تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
+                    <a href="/accessories.html" class="btn mt-4 inline-block">مشاهده</a>
                 </div>
             </div>
         </section>
 
         <!-- فوتر -->
-        <footer class="bg-white shadow-md rounded-lg p-6 mt-6 text-center">
-            <p class="text-gray-600">تمامی حقوق این وب‌سایت محفوظ است. © ۱۴۰۴ TestSit</p>
+        <footer class="rounded-lg p-6 mt-6">
+            <p>تمامی حقوق این وب‌سایت محفوظ است. © ۱۴۰۴ TestSit</p>
             <div class="mt-4 flex justify-center gap-4">
-                <a href="#" class="text-gray-600 hover:text-green-700">درباره ما</a>
-                <a href="#" class="text-gray-600 hover:text-green-700">تماس با ما</a>
-                <a href="#" class="text-gray-600 hover:text-green-700">شرایط و قوانین</a>
+                <a href="#">درباره ما</a>
+                <a href="#">تماس با ما</a>
+                <a href="#">شرایط و قوانین</a>
             </div>
         </footer>
     </div>
