--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <footer class="rounded-lg p-6 mt-6">
             <p>تمامی حقوق این وب‌سایت محفوظ است. © ۱۴۰۴ TestSit</p>
             <div class="mt-4 flex justify-center gap-4">
-                <a href="#">درباره ما</a>
-                <a href="#">تماس با ما</a>
-                <a href="#">شرایط و قوانین</a>
+                <a href="/about.html">درباره ما</a>
+                <a href="/contact.html">تماس با ما</a>
+                <a href="/terms.html">شرایط و قوانین</a>
             </div>
         </footer>
     </div>
