--- a/accessories.html
+++ b/accessories.html
@@ -32,14 +32,14 @@
                     <h3 class="text-lg font-semibold">فروشنده آرمان</h3>
                     <p class="mt-2">تأمین‌کننده برتر اکسسوری‌های قهوه با کیفیت بالا و ارسال سریع</p>
                     <p class="text-green-600 mt-2">۴.۷ از ۵ (۵۸ سفارش)</p>
-                    <a href="/vendor-armoon.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
+                    <a href="vendor-armoon.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
                 </div>
                 <div class="card p-6 text-center fade-in">
                     <img src="assets/images/vendor-x.jpg" alt="فروشنده X">
                     <h3 class="text-lg font-semibold">فروشنده X</h3>
                     <p class="mt-2">اکسسوری‌های متنوع برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
                     <p class="text-green-600 mt-2">۴.۲ از ۵ (۴۵ سفارش)</p>
-                    <a href="/vendor-x.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
+                    <a href="vendor-x.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
                 </div>
             </div>
         </section>
