--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <img src="/assets/images/accessories.jpg" alt="اکسسوری بار گرم و سرد" loading="lazy">
                     <h3 class="text-lg font-semibold">اکسسوری بار گرم و سرد</h3>
                     <p class="mt-2">تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
-                    <a href="/accessories.html" class="btn mt-4 inline-block">مشاهده</a>
+                    <a href="accessories.html" class="btn mt-4 inline-block">مشاهده</a>
                 </div>
             </div>
         </section>
