--- a/accessories.html
+++ b/accessories.html
@@ -40,7 +40,7 @@
                     <h3 class="text-lg font-semibold">فروشنده آرمان</h3>
                     <p class="mt-2">تأمین‌کننده برتر اکسسوری‌های قهوه با کیفیت بالا و ارسال سریع</p>
                     <p class="text-green-600 mt-2">۴.۷ از ۵ (۵۸ سفارش)</p>
-                    <a href="/vendor-armoon.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
+                    <a href="vendor-armoon.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
                 </div>
                 <div class="card p-6 text-center fade-in">
                     <img src="/assets/images/vendor-x.jpg" alt="فروشنده X" loading="lazy">
