--- a/index.html
+++ b/index.html
@@ -3,46 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="TestSit - بهترین اکسسوری‌های قهوه برای کافه‌ها">
     <title>TestSit</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
-    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <div class="container mx-auto p-4">
-        <div class="flex justify-end mb-4">
-            <button id="themeToggle" class="btn">تغییر تم</button>
-        </div>
+        <!-- سربرگ -->
         <header class="rounded-lg p-6 mb-6 flex items-center justify-between">
             <div class="flex items-center">
                 <img src="/assets/images/logo-testsit.png" alt="لوگو TestSit" class="logo">
                 <h1 class="text-3xl font-bold">TestSit</h1>
             </div>
-            <nav class="text-sm hidden sm:flex">
+            <nav class="text-sm">
                 <a href="/index.html">خانه</a>
                 <a href="/about.html" class="mr-4">درباره ما</a>
                 <a href="/signup.html" class="mr-4">ثبت‌نام</a>
             </nav>
-            <button id="mobileMenuBtn" class="sm:hidden btn">☰</button>
         </header>
-        <nav id="mobileMenu" class="sm:hidden hidden text-sm mb-4">
-            <a href="/index.html" class="block py-2">خانه</a>
-            <a href="/about.html" class="block py-2">درباره ما</a>
-            <a href="/signup.html" class="block py-2">ثبت‌نام</a>
-        </nav>
+
+        <!-- بخش خدمات -->
         <section class="py-12">
             <h2 class="text-2xl font-bold text-center mb-8">خدمات TestSit</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="card p-6 text-center fade-in">
-                    <img src="/assets/images/accessories.jpg" alt="اکسسوری بار گرم و سرد" loading="lazy">
+                    <img src="/assets/images/accessories.jpg" alt="اکسسوری بار گرم و سرد">
                     <h3 class="text-lg font-semibold">اکسسوری بار گرم و سرد</h3>
                     <p class="mt-2">تجهیزات موردنیاز برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
-                    <a href="accessories.html" class="btn mt-4 inline-block">مشاهده</a>
+                    <a href="/accessories.html" class="btn mt-4 inline-block">مشاهده</a>
                 </div>
             </div>
         </section>
+
+        <!-- فوتر -->
         <footer class="rounded-lg p-6 mt-6">
             <p>تمامی حقوق این وب‌سایت محفوظ است. © ۱۴۰۴ TestSit</p>
             <div class="mt-4 flex justify-center gap-4">
@@ -52,17 +46,5 @@
             </div>
         </footer>
     </div>
-    <script src="/service-worker.js"></script>
-    <script>
-        document.getElementById('themeToggle').addEventListener('click', () => {
-            document.body.classList.toggle('dark');
-            localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
-        });
-        if (localStorage.getItem('theme') === 'dark') document.body.classList.add('dark');
-
-        document.getElementById('mobileMenuBtn').addEventListener('click', () => {
-            document.getElementById('mobileMenu').classList.toggle('hidden');
-        });
-    </script>
 </body>
 </html>
