--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1 class="text-3xl font-bold">TestSit</h1>
             </div>
             <nav class="text-sm">
-                <a href="/index.html">خانه</a>
+                <a href="/testsit/index.html">خانه</a>
                 <a href="/signup.html" class="mr-4">ثبت‌نام</a>
             </nav>
         </header>
