--- a/accessories.html
+++ b/accessories.html
@@ -17,7 +17,7 @@
                 <h1 class="text-3xl font-bold">TestSit</h1>
             </div>
             <nav class="text-sm">
-                <a href="/index.html">خانه</a>
+                <a href="/testsit/index.html">خانه</a>
                 <a href="/about.html" class="mr-4">درباره ما</a>
                 <a href="/signup.html" class="mr-4">ثبت‌نام</a>
             </nav>
@@ -48,7 +48,6 @@
         <footer class="rounded-lg p-6 mt-6">
             <p>تمامی حقوق این وب‌سایت محفوظ است. © ۱۴۰۴ TestSit</p>
             <div class="mt-4 flex justify-center gap-4">
-                <a href="/about.html">درباره ما</a>
                 <a href="/contact.html">تماس با ما</a>
                 <a href="/terms.html">شرایط و قوانین</a>
             </div>
