--- a/accessories.html
+++ b/accessories.html
@@ -28,14 +28,14 @@
             <h2 class="text-2xl font-bold text-center mb-8">فروشندگان اکسسوری بار گرم و سرد</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                 <div class="card p-6 text-center fade-in">
-                    <img src="/assets/images/vendor-armoon.jpg" alt="فروشنده آرمان">
+                    <img src="assets/images/vendor-armoon.jpg" alt="فروشنده آرمان">
                     <h3 class="text-lg font-semibold">فروشنده آرمان</h3>
                     <p class="mt-2">تأمین‌کننده برتر اکسسوری‌های قهوه با کیفیت بالا و ارسال سریع</p>
                     <p class="text-green-600 mt-2">۴.۷ از ۵ (۵۸ سفارش)</p>
                     <a href="vendor-armoon.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
                 </div>
                 <div class="card p-6 text-center fade-in">
-                    <img src="/assets/images/vendor-x.jpg" alt="فروشنده X">
+                    <img src="assets/images/vendor-x.jpg" alt="فروشنده X">
                     <h3 class="text-lg font-semibold">فروشنده X</h3>
                     <p class="mt-2">اکسسوری‌های متنوع برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
                     <p class="text-green-600 mt-2">۴.۲ از ۵ (۴۵ سفارش)</p>
