--- a/accessories.html
+++ b/accessories.html
@@ -39,7 +39,7 @@
                     <h3 class="text-lg font-semibold">فروشنده X</h3>
                     <p class="mt-2">اکسسوری‌های متنوع برای دم‌آوری قهوه و نوشیدنی‌های سرد</p>
                     <p class="text-green-600 mt-2">۴.۲ از ۵ (۴۵ سفارش)</p>
-                    <a href="/vendor-x.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
+                    <a href="vendor-x.html" class="btn mt-4 inline-block">مشاهده محصولات</a>
                 </div>
             </div>
         </section>
