--- a/vendor-x.html
+++ b/vendor-x.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>فروشگاه آرمان - testsit</title>
+  <title>فروشگاه ایکس - testsit</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -28,7 +28,7 @@
     <nav class="text-sm text-gray-600 mb-4">
       <a href="/testsit/index.html" class="hover:text-green-700">خانه</a> &gt;
       <a href="/testsit/accessories.html" class="hover:text-green-700">اکسسوری</a> &gt;
-      <span>فروشنده آرمان</span>
+      <span>فروشنده ایکس</span>
     </nav>
 
     <!-- سربرگ -->
