--- a/vendor-armoon.html
+++ b/vendor-armoon.html
@@ -16,7 +16,7 @@
             <button id="themeToggle" class="btn">تغییر تم</button>
         </div>
         <nav class="text-sm mb-4">
-            <a href="/index.html">خانه</a> >
+            <a href="testsit/index.html">خانه</a> >
             <a href="/accessories.html" class="mr-2">اکسسوری</a> >
             <span>فروشنده آرمان</span>
         </nav>
@@ -167,10 +167,10 @@
     <script src="/service-worker.js"></script>
     <script>
         const products = [
-            { id: 1, name: 'تمپر قهوه استیل ۵۸.۴mm', price: 890000, stock: 5, shipping: 'تا ۲ روز کاری', desc: 'طراحی حرفه‌ای، ضد زنگ، مناسب اسپرسوسازهای صنعتی', rating: '⭐⭐⭐⭐⭐', votes: 15, image: '/assets/images/vendor-armoon-1.jpg', category: 'tamper' },
-            { id: 2, name: 'پاد تمپر سیلیکونی', price: 490000, stock: 8, shipping: '۱ روز کاری', desc: 'ضد لغزش، مقاوم در برابر حرارت بالا', rating: '⭐⭐⭐⭐☆', votes: 10, image: '/assets/images/vendor-armoon-2.jpg', category: 'tamper' },
-            { id: 3, name: 'فرچه اسپرسو مخزن‌دار', price: 250000, originalPrice: 300000, stock: 10, shipping: '۲ روز کاری', desc: 'مخزن شوینده دار، برس نرم، دسته ضد لغزش', rating: '⭐⭐⭐⭐☆', votes: 8, image: '/assets/images/vendor-armoon-3.jpg', category: 'cleaning' },
-            { id: 4, name: 'استند تمپر چوبی', price: 320000, stock: 3, shipping: '۱ تا ۲ روز کاری', desc: 'طراحی کلاسیک، نگهدارنده ایمن تمپر', rating: '⭐⭐⭐⭐⭐', votes: 12, image: '/assets/images/vendor-armoon-4.jpg', category: 'accessory' }
+            { id: 1, name: 'تمپر قهوه استیل ۵۸.۴mm', price: 890000, stock: 5, shipping: 'تا ۲ روز کاری', desc: 'طراحی حرفه‌ای، ضد زنگ، مناسب اسپرسوسازهای صنعتی', rating: '⭐⭐⭐⭐⭐', votes: 15, image: 'assets/images/vendor-armoon-1.jpg', category: 'tamper' },
+            { id: 2, name: 'پاد تمپر سیلیکونی', price: 490000, stock: 8, shipping: '۱ روز کاری', desc: 'ضد لغزش، مقاوم در برابر حرارت بالا', rating: '⭐⭐⭐⭐☆', votes: 10, image: 'assets/images/vendor-armoon-2.jpg', category: 'tamper' },
+            { id: 3, name: 'فرچه اسپرسو مخزن‌دار', price: 250000, originalPrice: 300000, stock: 10, shipping: '۲ روز کاری', desc: 'مخزن شوینده دار، برس نرم، دسته ضد لغزش', rating: '⭐⭐⭐⭐☆', votes: 8, image: 'assets/images/vendor-armoon-3.jpg', category: 'cleaning' },
+            { id: 4, name: 'استند تمپر چوبی', price: 320000, stock: 3, shipping: '۱ تا ۲ روز کاری', desc: 'طراحی کلاسیک، نگهدارنده ایمن تمپر', rating: '⭐⭐⭐⭐⭐', votes: 12, image: 'assets/images/vendor-armoon-4.jpg', category: 'accessory' }
         ];
 
         let cart = [];
