--- a/vendor-armoon.html
+++ b/vendor-armoon.html
@@ -129,6 +129,34 @@
                 <p>بله، تمام محصولات دارای ضمانت اصالت و سلامت فیزیکی هستند.</p>
             </div>
         </div>
+            <h2 class="text-xl font-semibold">محصولات مکمل پیشنهادی</h2>
+            <div id="relatedProducts" class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
+                <div class="card p-4">
+                    <img src="/assets/images/related-1.jpg" alt="قلاب تمپر ضد زنگ" loading="lazy">
+                    <p>قلاب تمپر ضد زنگ</p>
+                    <p>۱۵۰٬۰۰۰ تومان</p>
+                    <button class="btn mt-2 add-to-cart" data-id="101">افزودن به سبد</button>
+                </div>
+                <div class="card p-4">
+                    <img src="/assets/images/related-2.jpg" alt="قاشق مدرج قهوه" loading="lazy">
+                    <p>قاشق مدرج قهوه</p>
+                    <p>۸۰٬۰۰۰ تومان</p>
+                    <button class="btn mt-2 add-to-cart" data-id="102">افزودن به سبد</button>
+                </div>
+                <div class="card p-4">
+                    <img src="/assets/images/related-3.jpg" alt="فرچه تمیزکاری فیلتر اسپرسو" loading="lazy">
+                    <p>فرچه تمیزکاری فیلتر اسپرسو</p>
+                    <p>۷۰٬۰۰۰ تومان</p>
+                    <button class="btn mt-2 add-to-cart" data-id="103">افزودن به سبد</button>
+                </div>
+                <div class="card p-4">
+                    <img src="/assets/images/related-4.jpg" alt="کف‌زن شیشه‌ای آمریکانو" loading="lazy">
+                    <p>کف‌زن شیشه‌ای آمریکانو</p>
+                    <p>۱۲۰٬۰۰۰ تومان</p>
+                    <button class="btn mt-2 add-to-cart" data-id="104">افزودن به سبد</button>
+                </div>
+            </div>
+        </div>
         <div id="cartSummary" class="fixed bottom-4 right-4 card p-4 hidden">
             <h2 class="text-xl font-semibold">سبد خرید</h2>
             <ul id="cartItems" class="mt-4"></ul>
